src/objects/LogsWebService__c.object
<CustomObject>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperationType__c</fullName>
        <label>OperationType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentHospital_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentHospital_Id</label>
        <referenceTo>Hospital__c</referenceTo>
        <relationshipLabel>LogsWebServices</relationshipLabel>
        <relationshipName>LogsWebServices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <label>LogsWebService</label>
    <nameField>
        <label>LogsWebService Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LogsWebServices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>